# ArchitectureIQ

./: .gitignore  README.md  intro.md  pyproject.toml
ArchitectureIQ-quiz/: README.txt  data.js  manifest.json
data/real_curves/: marin_curves.jsonl  marin_pathologies.jsonl  pythia-1.4b_piqa_zeroshot.json  pythia_curves.jsonl
harbor/: Dockerfile.base  README.md  generate_tasks.py  run.yaml
harbor/tasks/: dataset.toml
results/: 2026-07-08-real-tier-eval.jsonl  2026-07-10-forecast-emergence-eval.jsonl
scripts/: eval_agents.py  eval_forecast.py  fetch_marin_curves.py  fetch_pythia_curves.py  plot_forecast.py  plot_leaderboard.py  pretrainbench_smoke.py
src/architectureiq/: __main__.py  baselines.py  blackbox.py  blackboxstate.py  bpforecast.py  curvebank.py  (+30 more)
tests/: test_baselines.py  test_bb_play.py  test_bbl_play.py  test_blackbox.py  test_blackbox_baseline.py  test_blackboxstate.py  test_bpfc_play.py  test_bpforecast.py  test_curvebank.py  test_datasets.py  test_determinism.py  test_diagnostic.py  test_discriminator.py  test_doctor.py  test_doctorstate.py  test_dr_play.py  test_dx_play.py  test_e2e_blackbox.py  test_e2e_doctor.py  test_e2e_fingerprint.py  test_e2e_forecast.py  test_e2e_tournament.py  test_episode.py  test_fc_play.py  test_fingerprint.py  test_forecast_episode.py  test_forecast_scoring.py  test_forecaststate.py  test_fpl_play.py  test_grid_doctor.py  test_harbor.py  test_leverfingerprint.py  test_leverid.py  test_models.py  test_play.py  test_real_forecast.py  test_real_play.py  test_real_tournament.py  test_realdoctor.py  test_runstate.py  (+11 more)
(+41 files in other folders)
