[project]
name = "architectureiq"
version = "0.1.0"
description = "ArchitectureIQ — interactive benchmark for LLM architecture intuition"
requires-python = ">=3.11"
dependencies = ["torch>=2.2", "numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
eval = ["matplotlib>=3.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/architectureiq"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
